// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Execute modal renders ExecuteModal component when given data 1`] = `
<Modal
  actions={
    Array [
      <Button
        isDisabled={true}
        onClick={[Function]}
        ouiaId="etag"
        variant="primary"
      >
        Execute playbook on 0 system
      </Button>,
      <Button
        onClick={[Function]}
        ouiaId="download-playbook"
        variant="secondary"
      >
        Download playbook
      </Button>,
      null,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="remediations rem-c-execute-modal"
  hasNoBodyWrapper={false}
  isFooterLeftAligned={true}
  isOpen={true}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title="Execute playbook"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <div
    className="rem-c-execute-modal__body"
  >
    <TextContent>
      <Text
        component="p"
      >
        Playbook contains 
        <b>
          1 action
        </b>
         affecting
        <b>
           
          5 systems.
           
        </b>
      </Text>
      <Text>
        <ExpandableSection
          className=""
          contentId=""
          displaySize="default"
          isActive={false}
          isDetached={false}
          isWidthLimited={false}
          onToggle={[Function]}
          toggleText="About remote execution with Cloud connector"
          toggleTextCollapsed=""
          toggleTextExpanded=""
        >
          Playbooks can be executed on systems which:
          <List>
            <ListItem>
              Are connected to Insights via a Satellite instance which has Receptor/Cloud Connector enabled, or 
              <br />
              <Button
                className="pf-u-p-0"
                component="span"
                href="https://access.redhat.com/documentation/en-us/red_hat_insights/2020-10/html/remediating_issues_across_your_red_hat_satellite_infrastructure_using_red_hat_insights/configuring-your-satellite-infrastructure-to-communicate-with-insights"
                isInline={true}
                key="download"
                rel="noreferrer"
                target="_blank"
                variant="link"
              >
                How to configure Receptor/Cloud Connector on Red Hat Satellite  
                <ExternalLinkAltIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              </Button>
            </ListItem>
            <ListItem>
              Are directly connected to Insights via Red Hat connector, and Cloud Connector is enabled 
              <br />
              <Button
                className="pf-u-p-0"
                component="span"
                href="#"
                isInline={true}
                key="configure"
                rel="noreferrer"
                target="_blank"
                variant="link"
              >
                How to enable Cloud Connector with Red Hat connect  
                <ExternalLinkAltIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              </Button>
            </ListItem>
          </List>
        </ExpandableSection>
      </Text>
      <Text
        component="p"
      >
        Executed Ansible Playbooks run on eligible systems with Cloud Connector. The playbook will be pushed immediately after selecting “Execute playbook”. If the playbook has “Auto reboot” on, systems requiring reboot to complete an action will reboot.
      </Text>
      <Button
        className="pf-u-p-0"
        component="span"
        href="#"
        isInline={true}
        key="configure"
        rel="noreferrer"
        target="_blank"
        variant="link"
      >
        Learn more about Cloud Connector  
        <ExternalLinkAltIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </TextContent>
    <Table
      aria-label="Systems"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "Connection type",
            "value": "type",
          },
          Object {
            "title": "Systems",
            "value": "count",
          },
          false,
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={Array []}
      selectVariant="checkbox"
      variant="compact"
    >
      <TableHeader />
      <Component />
    </Table>
  </div>
</Modal>
`;

exports[`Execute modal renders ExecuteModal with refresh message when showRefresh is true 1`] = `
<Modal
  actions={
    Array [
      <Button
        isDisabled={true}
        onClick={[Function]}
        ouiaId="etag"
        variant="primary"
      >
        Execute playbook on 0 system
      </Button>,
      <Button
        onClick={[Function]}
        ouiaId="download-playbook"
        variant="secondary"
      >
        Download playbook
      </Button>,
      null,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="remediations rem-c-execute-modal"
  hasNoBodyWrapper={false}
  isFooterLeftAligned={true}
  isOpen={true}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title="Execute playbook"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <div
    className="rem-c-execute-modal__body"
  >
    <Alert
      isInline={true}
      title="The connection status of systems associated with this Playbook has changed. Please review again."
      variant="warning"
    />
    <TextContent>
      <Text
        component="p"
      >
        Playbook contains 
        <b>
          1 action
        </b>
         affecting
        <b>
           
          5 systems.
           
        </b>
      </Text>
      <Text>
        <ExpandableSection
          className=""
          contentId=""
          displaySize="default"
          isActive={false}
          isDetached={false}
          isWidthLimited={false}
          onToggle={[Function]}
          toggleText="About remote execution with Cloud connector"
          toggleTextCollapsed=""
          toggleTextExpanded=""
        >
          Playbooks can be executed on systems which:
          <List>
            <ListItem>
              Are connected to Insights via a Satellite instance which has Receptor/Cloud Connector enabled, or 
              <br />
              <Button
                className="pf-u-p-0"
                component="span"
                href="https://access.redhat.com/documentation/en-us/red_hat_insights/2020-10/html/remediating_issues_across_your_red_hat_satellite_infrastructure_using_red_hat_insights/configuring-your-satellite-infrastructure-to-communicate-with-insights"
                isInline={true}
                key="download"
                rel="noreferrer"
                target="_blank"
                variant="link"
              >
                How to configure Receptor/Cloud Connector on Red Hat Satellite  
                <ExternalLinkAltIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              </Button>
            </ListItem>
            <ListItem>
              Are directly connected to Insights via Red Hat connector, and Cloud Connector is enabled 
              <br />
              <Button
                className="pf-u-p-0"
                component="span"
                href="#"
                isInline={true}
                key="configure"
                rel="noreferrer"
                target="_blank"
                variant="link"
              >
                How to enable Cloud Connector with Red Hat connect  
                <ExternalLinkAltIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                />
              </Button>
            </ListItem>
          </List>
        </ExpandableSection>
      </Text>
      <Text
        component="p"
      >
        Executed Ansible Playbooks run on eligible systems with Cloud Connector. The playbook will be pushed immediately after selecting “Execute playbook”. If the playbook has “Auto reboot” on, systems requiring reboot to complete an action will reboot.
      </Text>
      <Button
        className="pf-u-p-0"
        component="span"
        href="#"
        isInline={true}
        key="configure"
        rel="noreferrer"
        target="_blank"
        variant="link"
      >
        Learn more about Cloud Connector  
        <ExternalLinkAltIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </TextContent>
    <Table
      aria-label="Systems"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "Connection type",
            "value": "type",
          },
          Object {
            "title": "Systems",
            "value": "count",
          },
          false,
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={Array []}
      selectVariant="checkbox"
      variant="compact"
    >
      <TableHeader />
      <Component />
    </Table>
  </div>
</Modal>
`;
